fixed visibility of contacts

--- a/style.scss
+++ b/style.scss
@@ -1,77 +1,4 @@
 @import '_reset.scss';
 @import '_animations.scss';
-
-$greyviolet: #7A5C61;
-$millenialpink: #F7B3D3;
-$bluegray: #E8F0FF;
-$blue: #6874E8;
-$violet: #392759;
-$merriweather: 'Merriweather', serif;
-$lora: 'Lora', serif;
-#home{
-	width: 100%;
-	height: 100vh;
-	background-image: url(img/cotton-candy.jpg); 
-	background-repeat: no-repeat;
-	background-size: cover;
-	display: flex;
-	flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-	#presentation{
-		width: 90%;
-		height: 50%;
-		//margin: auto;
-    margin-top: 7%;
-		display: flex; 
-		justify-content: space-around;
-		align-items: center;
-		flex-direction: column;
-		.avatar{
-			width: 200px;
-			height: 200px;
-			border-radius: 50%;
-			box-shadow: 0px 0px 52px -10px #000000;
-		}
-		h1{
-			font-family: $merriweather;
-			font-size: 26px;
-			letter-spacing: 2px;
-			color: $violet;
-			font-weight: bold;
-			text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-		}
-		h4{
-			font-size: 24px;
-			letter-spacing: 1px;
-			font-weight: 600;
-			font-family: $lora;
-			color: $blue;
-			text-shadow: 2px 2px 2px rgba(150, 150, 150, 1);
-		}
-	}
-	.button-scroll{
-		cursor: pointer;
-		text-align: center;
-		animation: bouncing 500ms infinite alternate ease-in;
-		img{
-			width: 50px;
-			height: 50px;
-		}
-	}
-	.contact-bubbles{
-		position: fixed;
-    display: flex;
-    bottom: 20px;
-    right: 20px;
-    width: 130px;
-    justify-content: space-around;
-		a{
-			color: white;
-			transition: 0.5s ease-in-out;
-			&:hover{
-				color: $millenialpink;
-			}
-		}
-	}
-}
+@import '_home.scss';
+@import '_var.scss';
